# Terminwind

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  pyproject.toml  setup.py
src/: app.py  custom_scroll_view.py  editable_area.py  header.py  log  menu.py  resizing_directory_tree.py  sidebar.py  tabs.py
src/terminal/: test.py
temp/: f.py  file.py  test.py
terminwind/: __init__.py  __main__.py  app.py  button.py  custom_scroll_view.py  editable_area.py  main.py  resizing_directory_tree.py  sidebar.py  tabs.py
terminwind/terminal/: terminal.py
