[tool.poetry]
name = "terminwind"
version = "0.1.0"
description = ""
authors = ["Yubo Wang <yubowang2007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
rich = "^11"
textual = "^0.1.15"
aiofile = "^3.7.4"
pyperclip = "^1.8.2"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
